# django-backend-system

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: conftest.py
app/accounts/: apps.py  enum.py  manager.py  models.py  serializers.py  views.py
app/accounts/migrations/: 0001_initial.py  0002_alter_customuser_managers_remove_customuser_username_and_more.py  0003_alter_customuser_bio.py  0004_customuser_created_date.py
app/api/: asgi.py  urls.py  wsgi.py
app/api/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
app/api/settings/templates/: settings.dev.py  settings.unittests.py
app/general/tests/fixtures/: __init__.py  clients.py  misc.py
app/general/utils/: pytest.py
core/utils/: collections.py  misc.py  settings.py
local/: settings.dev.py
scripts/: entrypoint.sh  production_data.py
